--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "body-parser": "^1.19.0",
         "circular-json": "^0.5.9",
         "express": "^4.17.1",
+        "mongoose": "^5.12.13",
         "nodemon": "^2.0.7"
     }
 }
