--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "circular-json": "^0.5.9",
         "express": "^4.17.1",
         "mongoose": "^5.12.13",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "util": "^0.12.4"
     }
 }
